# cpe-inspector

./: .gitmodules  README.md  docker-compose.arm64.yml  pyproject.toml
http/: genieacs.http
src/: client.py
