[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpe-inspector"
version = "0.1.0"
description = "A CLI tool for querying and automating CPE devices via GenieACS NBI"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "rich>=13",
]

[tool.setuptools.packages.find]
where = ["src"]
